<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".controlador.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputEmail"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:errorEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmail"
            android:maxLength="60"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:inputType="textEmailAddress"
            android:hint="@string/email_ini_sesion" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputContras"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:errorEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edContras"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/pass_ini_sesion"
            android:inputType="textPassword"
            android:maxLength="30" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnIniSesion"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_redondeados_mor"
        android:fontFamily="@font/comfortaa"
        android:text="@string/_ini_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <TextView
        android:id="@+id/txtSinCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/no_account_ini_sesion"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_redondeados_mor"
        android:fontFamily="@font/comfortaa"
        android:text="@string/reg_ini_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />

    <ImageView
        android:id="@+id/imgLogoTxt"
        android:layout_width="wrap_content"
        android:layout_height="238dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondopuntos" />

</androidx.constraintlayout.widget.ConstraintLayout>