<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputTituloNew"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textColorHint="#959595"
        app:errorEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edTituloNew"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/tit_new_anuncio"
            android:inputType="textShortMessage"
            android:maxLength="30"
            android:textColor="#E3E3E3"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputDescNew"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textColorHint="#959595"
        app:errorEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edDescripNew"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/desc_new_anuncio"
            android:inputType="textMultiLine"
            android:maxLength="300"
            android:textColor="#E3E3E3" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputUbicacioNew"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textColorHint="#959595"
        app:errorEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edUbicacionNew"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/ubic_new_anuncio"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:textColor="#E3E3E3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputPuntosNew"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textColorHint="#959595"
        app:errorEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPuntosNew"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/puntos_new_anuncio"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="#E3E3E3" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat_new_anuncio"
        android:textColor="#E3E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <Spinner
        android:id="@+id/spinCat"
        android:layout_width="260dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <Button
        android:id="@+id/btnFinNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_redondeados_cel"
        android:onClick="clickOfrecer"
        android:text="@string/ofrecer_new_anuncio"
        android:textColor="#E3E3E3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

</androidx.constraintlayout.widget.ConstraintLayout>