<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:id="@+id/frgPerfil">

    <TextView
        android:id="@+id/txtPuntosPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntos_perfil"
        android:textColor="#E6E6E6"
        android:fontFamily="@font/comfortaa"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ListView
        android:id="@+id/listaMisAnuncios"
        android:layout_width="0dp"
        android:layout_height="515dp"
        android:fontFamily="@font/comfortaa"
        android:textColor="#C8C8C8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnRefresh"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_redondeados_cel"
        android:fontFamily="@font/comfortaa"
        android:text="@string/actualizar_perfil"
        android:textColor="#E6E6E6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/btnTrueques"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_redondeados_cel"
        android:textColor="#E6E6E6"
        android:fontFamily="@font/comfortaa"
        android:text="@string/trueqes_perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

</androidx.constraintlayout.widget.ConstraintLayout>